--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h2>Heading 2 here</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, ut?</p>
 </body>
 
 </html>
